@startuml
class AddRoomController {
  - house : House
  - mapperToRoomDTO : MapperToRoomDTO
  + AddRoomController(...)
  + addNewRoomToHouse(...) : RoomDTO
}

class MapperToRoomDTO {
  + MapperToRoomDTO()
  + roomToDTO(...) : RoomDTO
}

class RoomFactoryImp {
  + RoomFactoryImp(...)
  + createRoom(...) : Room
}

class DimensionFactoryImp {
  + DimensionFactoryImp()
  + createDimensions(...) : Dimensions
}

interface RoomFactory {
  + createRoom(...) : Room
}
interface DimensionFactory {
  + createDimensions(...) : Dimensions
}
interface DeviceFactory {
}

class DeviceFactoryImp {
  + DeviceFactoryImp(...)
}


class House {
  + House(...)
  + addRoom(...) : boolean
}

class Room {
  - name : String
  - floor : int
  + Room(...)
  + getName() : String
  + getFloor() : int
  + getDimensions() : Dimensions
}

class Dimensions {
  - width : double
  - length : double
  - height : double

  + Dimensions(...)
  + getWidth() : double
  + getLength() : double
  + getHeight() : double
}

class RoomDTO {
  - name : String
  - floor : int
  - width : double
  - length : double
  - height : double

  + RoomDTO(...)
  + getName() : String
  + getFloor() : int
  + getWidth() : double
  + getLength() : double
  + getHeight() : double
}

AddRoomController .left.> MapperToRoomDTO : uses
MapperToRoomDTO "1" ..> "1  " RoomDTO : create
MapperToRoomDTO ..> Room : uses
RoomFactory <|.. RoomFactoryImp : implements
Room "1" *-- "1" Dimensions : contains
Room "1" *-- "1" DeviceFactory: contains
RoomFactoryImp "1" ..> "1" Room : creates

House "1" *--"*" Room : contains
AddRoomController .right.> House : uses
AddRoomController ..> RoomDTO : uses
Room .left.> DimensionFactory : uses
DimensionFactory <|.. DimensionFactoryImp : implements
DimensionFactoryImp "1" ..> "1" Dimensions : creates
House ..> RoomFactory : uses
DeviceFactory <|.right. DeviceFactoryImp : implements


@enduml
